--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: autodeploy
+  name: autodeploy525
   labels:
-    app: autodeploy
-  namespace: namespace-workflow-1692811819315
+    app: autodeploy525
+  namespace: namespace-workflow-1716316313394
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: autodeploy
+      app: autodeploy525
   template:
     metadata:
       labels:
-        app: autodeploy
+        app: autodeploy525
     spec:
       containers:
-        - name: autodeploy
-          image: acrworkflow1692811819315.azurecr.io/image-workflow-1692811819315:latest
+        - name: autodeploy525
+          image: acrworkflow1716316313394.azurecr.io/image-workflow-1716316313394:latest
           ports:
             - containerPort: 5000
