--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: autodeploy
-  namespace: namespace-workflow-1692811819315
+  name: autodeploy525
+  namespace: namespace-workflow-1716316313394
 spec:
   type: LoadBalancer
   selector:
-    app: autodeploy
+    app: autodeploy525
   ports:
     - protocol: TCP
       port: 5000
